# KMatrixMCMC

./: .gitignore  Amplitude.cpp  Amplitude.h  CMakeLists.txt  DataReader.cpp  DataReader.h  Doxyfile  KMatrix.cpp  KMatrix.h  LICENSE.md  Likelihood.cpp  Likelihood.h  Makefile  README.md  gmon.out_old  main.cpp  test.py
.github/workflows/: build.yml
apps/: CMakeLists.txt  main.cpp
docs/: Doxyfile.in
docs/html/: Amplitude_8h_source.html  Likelihood_8h_source.html  classAmplitude-members.html  classDataReader-members.html  classDataReader.html  classKMatrix.html  classLikelihood-members.html  classes.html  functions.html  pages.html
docs/html/search/: all_1.js  all_9.js  classes_2.js  functions_5.js  functions_7.js  pages_0.js  searchdata.js
docs/latex/: DataReader_8h_source.tex  KMatrix_8h_source.tex  classAmplitude.tex  classLikelihood.tex  refman.tex
html/: DataReader_8h_source.html  KMatrix_8h_source.html  annotated.html  classAmplitude.html  classKMatrix-members.html  classKMatrix.html  classLikelihood.html  files.html  functions.html  functions_func.html  index.html  md_LICENSE.html  md_README.html  menudata.js
html/search/: all_1.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_3.js  functions_1.js  functions_2.js  functions_4.js  searchdata.js
include/: Amplitude.hpp  DataReader.hpp  KMatrix.hpp  Likelihood.hpp
latex/: Amplitude_8h_source.tex  KMatrix_8h_source.tex  Likelihood_8h_source.tex  annotated.tex  classDataReader.tex  classKMatrix.tex  files.tex  md_LICENSE.tex  md_README.tex
src/: Amplitude.cpp  CMakeLists.txt  DataReader.cpp  DataReader.h  KMatrix.cpp  Likelihood.cpp  main.cpp
tests/: CMakeLists.txt  test_kmatrix.cpp
